--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <style>
+        .score {
+            font-size: 24px;
+        }
+    </style>
 </head>
 <body>
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
+    <div>Player Score: <span id="playerScore">0</span></div>
+    <div>Computer Score: <span id="compScore">0</span></div>
+    <div class="result"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
